# zipora

./: .gitignore  .mirirc  BENCHMARK_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_CPP_BENCHMARK_SYSTEM.md  COMPREHENSIVE_PERFORMANCE_REPORT.md  Cargo.toml  FINAL_REVIEW.md  GEMINI.md  LICENSE  MEMORY_PERFORMANCE.md  Makefile  PERFORMANCE_REPORT.md  PERFORMANCE_ROADMAP.md  PERF_VS_CPP.md  PORTING_STATUS.md  README.md  README_cn.md  SIMD_OPTIMIZATION_SUMMARY.md  SUMMARY.md  TOPLING_SYNC_ANALYSIS.md  UPDATED_CPP_BENCHMARK_REPORT.md  build.rs  codereview_round6.md  cpp_benchmark_results.txt  run_benchmarks.sh  run_cpp_bench.sh  run_cpp_comparison.sh  run_miri_tests.sh  rust_benchmark_results.txt
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
benches/: adaptive_mmap_bench.rs  advanced_radix_sort_bench.rs  avx512_bench.rs  benchmark.rs  benchmark_rank_select.rs  benchmark_sparse_implementations.rs  cache_bench.rs  cache_locality_bench.rs  cache_oblivious_bench.rs  comprehensive_trie_benchmarks.rs  compressed_sparse_trie_bench.rs  cpp_comparison.rs  cpp_impl_comparison.rs  crit_bit_trie_bench.rs  dict_zip_bench.rs  dictionary_optimization_bench.rs  double_array_trie_bench.rs  elias_fano_bench.rs  entropy_bench.rs  five_level_pool_bench.rs  fsa_infrastructure_bench.rs  hash_maps_bench.rs  int_vec_benchmark.rs  lru_map_bench.rs  memory_performance.rs  memory_pools_bench.rs  nested_louds_trie_bench.rs  patricia_trie_bench.rs  prefetch_adaptive_bench.rs  profiling_overhead_bench.rs  quick_prefetch_bench.rs  rank_select_bench.rs  secure_memory_pool_bench.rs  separated_storage_config_bench.rs  separated_storage_simple_bench.rs  simd_memory_bench.rs  simd_rank_select_bench.rs  simple_benchmark.rs  simple_test.rs  sortable_str_vec_bench.rs  (+5 more)
benches/cpp_impl_comparison/: mod.rs  rank_select_comparison.rs
cpp_benchmark/: CMakeLists.txt  README.md  README_COMPARISON.md  analyze_results.py  build.sh  enhanced_wrapper.cpp  stub_wrapper.cpp  test_wrapper.cpp  wrapper.cpp  wrapper.hpp  wrapper_test
docs/: ALGORITHMS.md  BLOB_STORAGE.md  COMPRESSION.md  CONCURRENCY.md  CONFIGURATION.md  CONTAINERS.md  ENHANCED_SAFETY_TESTS.md  ERROR_HANDLING.md  FFI.md  HASH_MAPS.md  IO_SERIALIZATION.md  MEMORY_MANAGEMENT.md  MIGRATION_GUIDE.md  MULTIDIM_SIMD.md  PERFORMANCE.md  PERFORMANCE_ROADMAP.md  PERF_VS_CPP.md  PORTING_STATUS.md  SEARCH_ENGINE_GUIDE.md  SIMD.md  SIMD_MEMORY_OPS.md  STRING_PROCESSING.md  VALVEC32_OPTIMIZATION_REPORT.md  VALVEC32_PERFORMANCE_REPORT.md  cache_locality_optimizations.md
examples/: advanced_nested_louds_demo.rs  basic_usage.rs  compact_entry_test.rs  config_demo.rs  debug_crit_bit_trie.rs  debug_longest_prefix.rs  debug_space_test.rs  debug_test.rs  debug_zero_byte.rs  dictionary_performance_demo.rs  entropy_coding_demo.rs  intvec_perf_test.rs  memory_mapping_demo.rs  optimized_rank_select_demo.rs  prefetch_performance_demo.rs  production_benchmark.rs  profiling_validation.rs  secure_memory_pool_demo.rs  simd_memory_ops_demo.rs  simd_optimization_demo.rs  sortable_fair_test.rs  sortable_performance_test.rs  specialized_containers_demo.rs  succinct_demo.rs  test_algorithm_selection.rs  valvec32_optimized_bench.rs  valvec32_perf.rs  valvec32_push_analysis.rs  valvec32_quick_test.rs
src/: debug_crit_bit.rs  dev_infrastructure.rs  error.rs  error_recovery.rs  lib.rs
src/algorithms/: bit_ops.rs  cache_oblivious.rs  external_sort.rs  mod.rs  multiway_merge.rs  radix_sort.rs  set_operations.rs  set_ops.rs  simd_merge.rs  simd_search.rs  simd_set_intersect.rs  simd_set_union.rs  suffix_array.rs  tournament_tree.rs
src/blob_store/: cached_store.rs  compressed.rs  entropy.rs  file_header.rs  memory.rs  mixed_len.rs  mod.rs  nest_louds_trie_blob_store.rs  plain.rs  reorder_map.rs  simple_zip.rs  sorted_uint_vec.rs  traits.rs  zero_length.rs  zip_offset.rs  zip_offset_builder.rs
src/cache/: basic_cache.rs  buffer.rs  config.rs  lru_cache.rs  mod.rs  page_cache.rs  sharding.rs  simple_impl.rs  simple_tests.rs  stats.rs  tests.rs
src/compression/: adaptive.rs  mod.rs  realtime.rs  simd_lz77.rs  simd_pattern_match.rs  stream_vbyte.rs  suffix_array.rs
src/concurrency/: async_blob_store.rs  enhanced_mutex.rs  fiber_aio.rs  fiber_pool.rs  fiber_yield.rs  mod.rs  parallel_trie.rs  pipeline.rs  work_stealing.rs
src/config/: blob_store.rs  cache.rs  compression.rs  memory.rs  mod.rs  nest_louds_trie.rs  simd.rs  tests.rs
src/containers/: fast_vec.rs  mod.rs  uint_vec_min0.rs  zip_int_vec.rs
src/dev_infrastructure/: debug.rs  factory.rs  profiling.rs  statistics.rs
src/entropy/: bit_ops.rs  context.rs  dictionary.rs  fse.rs  huffman.rs  mod.rs  parallel.rs  rans.rs  rans_fixed.rs  rans_minimal.rs  rans_reference.rs  rans_simple.rs  rans_simple_debug.rs  simd_huffman.rs
tests/: compressed_sparse_trie_tests.proptest-regressions  compressed_sparse_trie_tests.rs  container_performance_tests.rs  container_property_tests.proptest-regressions  container_property_tests.rs  container_safety_tests.rs  cspp_trie_comprehensive_tests.rs  cspp_trie_concurrent_tests.rs  cspp_trie_tests.rs  dict_zip_basic_tests.proptest-regressions  dict_zip_basic_tests.rs  dict_zip_comprehensive_tests.proptest-regressions  dict_zip_comprehensive_tests.rs  dict_zip_minimal_tests.rs  double_array_trie_tests.proptest-regressions  double_array_trie_tests.rs  entropy_performance_tests.rs  ffi_comprehensive_tests.rs  ffi_error_handling_tests.rs  fsa_infrastructure_tests.rs  fse_tests.rs  hardware_verification_test.rs  hash_maps_zipora_tests.rs  io_streams_integration.rs  mmap_soundness_test.rs  nested_louds_trie_tests.proptest-regressions  nested_louds_trie_tests.rs  profiling_stress_tests.rs  radix_sort_alloc_bound.rs  rank_select_interleaved256_test.rs  secure_memory_pool_tests.rs  security_memory_pool.rs  security_memory_pool_simple.rs  simd_base64_tests.rs  simd_corruption_repro.rs  simd_search_test.rs  sparse_implementations_integration_tests.rs  sparse_performance_validation.rs  specialized_containers_comprehensive.proptest-regressions  specialized_containers_comprehensive.rs  (+8 more)
(+223 files in other folders)
